5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1675_2473.log
== TEST (2019-05-14 11:40:14) 
-- CODE:
ano = int(input())
if in not in range(1900,2100):
	print("ano invalido")
elif:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3",ano)
else:
	print(22+d+e-31,"- 4",ano)
-- ERROR:
File "XXXX", line 2
    if in not in range(1900,2100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:23) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
elif:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3",ano)
else:
	print(22+d+e-31,"- 4",ano)
-- ERROR:
File "XXXX", line 4
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:57) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3",ano)
else:
	print(22+d+e-31,"- 4",ano)
-- OUTPUT:
26 - 3 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:16) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:49) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:41:58) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.233055
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
26 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:43:03) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100) or ano==1954 or ano==1981 or ano==2049 or ano==2076:
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.188133
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:44:00) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100) or ano==1954 or ano==1981 or ano==2049 or ano==2076:
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:44:26) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100) or ano==1954 or ano==1981 or ano==2049 or ano==2076:
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if 22+d+e<=31:
	print(22+d+e,"- 3 -",ano)
else:
	print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.183759
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
ano invalido
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:46:51) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if ano==1954 or ano==1981 or ano==2049 or ano==2076:
	elif 22+d+e+7<=31:
		print(22+d+e+7,"- 3 -",ano)
	else:
		print(22+d+e-31+7,"- 4 -",ano)
else:
	elif 22+d+e<=31:
		print(22+d+e,"- 3 -",ano)
	else:
		print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.144287
-- ERROR:
  File "/home/codebench/codes/1675/2473/main.py", line 11
    elif 22+d+e+7<=31:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:47:20) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
if ano==1954 or ano==1981 or ano==2049 or ano==2076:
	elif 22+d+e-7<=31:
		print(22+d+e-7,"- 3 -",ano)
	else:
		print(22+d+e-31-7,"- 4 -",ano)
else:
	elif 22+d+e<=31:
		print(22+d+e,"- 3 -",ano)
	else:
		print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.162201
-- ERROR:
  File "/home/codebench/codes/1675/2473/main.py", line 11
    elif 22+d+e-7<=31:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:48:12) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
	if ano==1954 or ano==1981 or ano==2049 or ano==2076:
		elif 22+d+e-7<=31:
			print(22+d+e-7,"- 3 -",ano)
		else:
			print(22+d+e-31-7,"- 4 -",ano)
	else:
		elif 22+d+e<=31:
			print(22+d+e,"- 3 -",ano)
		else:
			print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.214485
-- ERROR:
  File "/home/codebench/codes/1675/2473/main.py", line 11
    elif 22+d+e-7<=31:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:48:27) 
-- CODE:
ano = int(input())
if ano not in range(1900,2100):
	print("ano invalido")
else:
	a = ano%19
	b = ano%4
	c = ano%7
	d = (19*a + 24)%30
	e = (2*b + 4*c + 6*d + 5)%7
	if ano==1954 or ano==1981 or ano==2049 or ano==2076:
		if 22+d+e-7<=31:
			print(22+d+e-7,"- 3 -",ano)
		else:
			print(22+d+e-31-7,"- 4 -",ano)
	else:
		if 22+d+e<=31:
			print(22+d+e,"- 3 -",ano)
		else:
			print(22+d+e-31,"- 4 -",ano)
-- EXECUTION TIME:
0.128587
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
